--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.32.0",
     "@types/nookies": "^2.0.3",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.378.0",
     "match-sorter": "^6.3.4",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
